# uninews

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  rust-toolchain.toml  taplo.toml
.cargo/: config.toml
.junie/: plan.md
.run/: collect.run.xml  init.run.xml
.sqlx/: query-1340489ffa56f3e0cf74a6c3f133004b78f8da88833c580291f2bbc65cdb6d69.json  query-1359d5ceec667c75bd1a4e3c2f7c5218f54ba70d4bf53c682737851bb24f996c.json  query-17b6daf6db1c393e2360da383799dab257799928641387cb4acfb6089fdaceac.json  query-199555f6903a40d6cec501383b1df7865203b6e21baf9cade752031c9a484ed2.json  query-232c5a7074d6612eff115ff643a8ff806a3c91b09bb18ba9c2c827c018f01873.json  query-23edd5c7db56abfedbe6200e11ebda43969f838e819cb4078bda0c0e8c74b19c.json  query-2a9344f70dce37991798f988e8418803d3f1a2620f507ae45d79696cccb3bad8.json  query-2cc8fbf72841470b0b7363121d6601f8e1f01e3132d1878678c6008201d1cd24.json  query-37b52708b50aa8948f29991c72839445315532275271c87e62d7e16f27c6f21a.json  query-3927b43febb81f5bc25b01bc83bf3aed9cf9e7182aad52f497736870efefcd6f.json  query-428cfb34b391c93e6c1171279ab99236dbd915b3ed397df4df4dd4823a322002.json  query-4c30dea242435498ad1e4077d55b07da035be8a14cd94bad4aa2f6999ac579ae.json  query-4cca653b99f68b46367698b65611839f3bf9cf625ce5d525eb53e475d7804f13.json  query-51c491da43108ea722fee08037c34cdeae8d0b8cbe48d3cc78f34c7b8a9ad265.json  query-55e2ec7c796ba7e973e6a3395b823275e697a702090ffac028cabd47923bddcb.json  query-586ddc90881bce19472e10e12e2210c5defbf440307f6d8030bd99b79a4564f4.json  query-6024012c4bb89c0af75583fffbeb82d49c3e5738d7dc74fe9a830d076ab6ea56.json  query-7119f94ad26259bfb171cb011d74a9024ce4d9cfeb4fe316e2379ae48d4105b3.json  query-7502b940eaa59d40ddde56cb27693cd0b103f44219132e48fdb347f00889a4f3.json  query-76a768a93ebcb4a37e3c449b71a3f0f284e686584275df4cc68557b623277ec9.json  query-7ae06e87f5335f9a97ba134b6fb60e23f32978e524f4dc7962d3a82fb1fb0e11.json  query-7ae3901ec86950e5aa2c8a8188ef9125a486963ba83e7fda9ac99adf6c0caa6b.json  query-7f9ff36b4618aca8c590fbfb0a6748126413c116c2a81ae82bff4b4ecec0ae53.json  query-83d8a46c077019873cfba0f179c2a22c54c5b4996af6f16973f77c682d79b2ce.json  query-848783f8ed0af4129db0921dd3d348d06f078bd3e32dda3908b564bb4185a514.json  query-88496a93f7c4f2de2788234e34774a7e2c2eb06d009bdda72d81874e964327a3.json  query-89af76a6497b22954ff9497a9abf1c6799076b2579feec0164f5d6d922bcd04a.json  query-96e6946940ec4545be32c2ba959c6439f736d2a0b6a34191df38c95ae6882dcf.json  query-9f83c69db6f64e744c90fd359b23fca89c999ba5f93d37bf4625ed81b0426b67.json  query-a9685b9e8ad4dacbc5ce7d6a95f54ce83390324c1da4a44d5959c56e7708d810.json  query-b15cab0a4e8d5e60988f3646eb3ada1047c3e34227603f24b7a348c6c320bef5.json  (+11 more)
crates/adapters/: Cargo.toml
crates/adapters/src/: utils.rs
crates/adapters/src/repos/: news.rs  source.rs
crates/adapters/src/services/: news.rs  source.rs  storage.rs
crates/adapters/src/utils/: sqlite.rs
crates/adapters/src/utils/sqlite/: tools.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  command.rs  commands.rs  configure.rs  lib.rs  main.rs  report.rs
crates/cli/src/cli/: errors.rs  output.rs  report.rs
crates/cli/src/commands/: collect.rs  init.rs  source.rs
crates/cli/src/commands/source/: add.rs  list.rs  remove.rs
crates/cli/src/commands/source/add/: atom.rs  telegram.rs
crates/cli/src/commands/source/remove/: atom.rs  telegram.rs
crates/collect/: Cargo.toml
crates/collect/src/: cli.rs  config.rs  configure.rs  lib.rs  main.rs  services.rs  source.rs  sources.rs  state.rs
crates/collect/src/cli/: config.rs  logger.rs  runners.rs
crates/collect/src/configure/: atom.rs  config.rs  telegram.rs
crates/collect/src/source/: atom.rs  telegram.rs
crates/collect/src/source/atom/: feed.rs  item.rs  update_handler.rs
crates/collect/src/source/telegram/: item.rs  update_handler.rs
crates/collect/src/sources/: atom.rs  telegram.rs
crates/collect/src/state/: raw.rs
crates/collect/src/state_config/: atom.rs  config.rs
crates/collect/src/utils/: html.rs  markdown.rs
crates/collect/tests/: cli_end_to_end.rs  cli_logging.rs  common.rs  property_tests.proptest-regressions  property_tests.rs  snapshot_cli.rs
crates/collect/tests/fixtures/: minimal.toml
crates/core/: Cargo.toml
crates/core/src/: cli.rs  errors.rs  fs.rs  http.rs  lib.rs  models.rs  news.rs  parse.rs  repos.rs  services.rs  storage.rs  url.rs  utils.rs
crates/core/src/http/: live.rs  service.rs
crates/core/src/models/: news.rs  source.rs
crates/core/src/models/source/: atom.rs  telegram.rs
crates/core/src/news/: live.rs
crates/core/src/repo/: source.rs
crates/core/src/repo/source/: sqlite.rs
crates/core/src/repos/: news.rs  source.rs
crates/core/src/services/: http.rs  news.rs  source.rs
crates/core/src/services/http/: live.rs  service.rs
crates/core/src/services/news/: live.rs  service.rs  sqlite.rs
crates/core/src/services/source/: sqlite.rs
crates/core/src/services/storage/: live.rs  service.rs
crates/core/src/storage/: live.rs
crates/core/src/utils/: fs.rs  uuid.rs
crates/manage/: Cargo.toml
crates/manage/src/: cli.rs  main.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs  services.rs  utils.rs
crates/services/src/repos/: source.rs
crates/services/src/services/: http.rs  source.rs
crates/services/src/utils/: coders.rs
crates/sqlite_core/: Cargo.toml
crates/sqlite_core/src/: db.rs  lib.rs  repos.rs  services.rs  utils.rs
crates/sqlite_core/src/db/: codecs.rs  errors.rs  init.rs  mapping.rs
crates/sqlite_core/src/repos/: news.rs  source.rs
crates/sqlite_core/src/services/: http.rs  news.rs  source.rs  uuid.rs
crates/sqlite_core/src/utils/: fs.rs  parse.rs  text.rs
crates/watch/: Cargo.toml
crates/watch/src/: cli.rs  lib.rs  state.rs
crates/watch/src/source/: atom.rs  telegram.rs
crates/watch/src/source/atom/: feed.rs  feed_item.rs  update_handle.rs
crates/watch/src/source/telegram/: item.rs  parse.rs  update_handle.rs
crates/watch/src/utils/: html.rs
(+16 files in other folders)
