[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0-alpha.1"

authors = ["zoobestik <kb.chernenko@gmail.com>"]
description = "A small Rust workspace for experimenting with collecting content sources into a single feed pipeline."
homepage = "https://github.com/zoobestik/uninews"
license = "MIT"
publish = false
repository = "https://github.com/zoobestik/uninews"

[workspace.dependencies]
async-trait = { version = "^0.1.89" }
chrono = { version = "^0.4.42" }
clap = { version = "^4.5.49", features = ["derive"] }
dotenvy = { version = "^0.15.7" }
futures = { version = "^0.3.31" }
reqwest = { version = "^0.12.24" }
sqlx = { version = "^0.8.6", default-features = false, features = ["chrono", "derive", "json", "macros", "migrate", "runtime-tokio", "sqlite", "time", "uuid"] }
thiserror = { version = "^2.0.17" }
tokio = { version = "^1.47.1", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
tracing = { version = "^0.1.41" }
tracing-subscriber = { version = "^0.3.20", features = ["env-filter", "json"] }
url = { version = "^2.5.7" }
uuid = { version = "^1.18.1", features = ["v5", "v7"] }
