[package]
name = "uninews_adapters"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
uninews_core = { path = "../core" }

async-trait.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
