[package]
name = "uninews_cli"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "uninews"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uninews_collect = { path = "../collect" }
uninews_manage = { path = "../manage" }
