[package]
name = "uninews_collect"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "uncol"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
dotenvy.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { version = "^2.5.7", features = ["serde"] }
