[package]
name = "uninews_collect"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "uncol"
path = "src/main.rs"

[dependencies]
ammonia = { version = "^4.1.2" }
async-trait.workspace = true
dotenvy.workspace = true
futures.workspace = true
htmd = { version = "^0.3.2" }
rss = { version = "^2.0.12" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uninews_core = { path = "../core" }
url.workspace = true
uuid.workspace = true
