[package]
name = "uninews_collect"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
uninews_adapters = { path = "../adapters" }
uninews_core = { path = "../core" }

ammonia = { version = "^4.1.2" }
async-trait.workspace = true
clap.workspace = true
feed-rs = { version = "^2.3.1", features = ["sanitize"] }
futures.workspace = true
htmd = { version = "^0.3.2" }
scraper = { version = "^0.24.0", features = ["serde"] }
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
