[package]
name = "uninews_core"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "uninews_core"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
