[package]
edition.workspace = true
name = "uninews_core"
version.workspace = true

authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
url.workspace = true
uuid.workspace = true
