[package]
name = "uninews_manage"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "manage"
path = "src/main.rs"

[dependencies]
