[package]
name = "uninews_manage"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uninews_core = { path = "../core" }
