[package]
name = "news_watch"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
news_core = { path = "../core" }
news_sqlite_core = { path = "../sqlite_core" }

ammonia = { version = "^4.1.2" }
async-trait.workspace = true
feed-rs = { version = "^2.3.1", features = ["sanitize"] }
futures.workspace = true
htmd = { version = "^0.4.0" }
# ID:  RUSTSEC-2025-0057
# URL: https://rustsec.org/advisories/RUSTSEC-2025-0057
scraper = { git = "https://github.com/rust-scraper/scraper.git", rev = "3fca4f1" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
